first parts to allow the generation of an admin UI out of the model

--- a/modules/generator/pom.xml
+++ b/modules/generator/pom.xml
@@ -27,6 +27,15 @@
             <artifactId>javapoet</artifactId>
             <version>1.13.0</version>
         </dependency>
+        <dependency>
+            <groupId>io.marioslab.basis</groupId>
+            <artifactId>template</artifactId>
+            <version>1.7</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-yaml</artifactId>
+        </dependency>
     </dependencies>
     
     <build>
