move cloud.quinimbus.magic.elements to a seperate module

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     
     <modules>
         <module>modules/annotations</module>
+        <module>modules/elements</module>
         <module>modules/generator</module>
     </modules>
     
