--- a/modules/generator/pom.xml
+++ b/modules/generator/pom.xml
@@ -20,6 +20,11 @@
     <dependencies>
         <dependency>
             <groupId>cloud.quinimbus</groupId>
+            <artifactId>magic-elements</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>cloud.quinimbus</groupId>
             <artifactId>common-tools</artifactId>
         </dependency>
         <dependency>
