--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>cloud.quinimbus</groupId>
     <artifactId>magic</artifactId>
-    <version>0.1.0</version>
+    <version>0.2-SNAPSHOT</version>
     <name>QuiNimbus MAGIC Parent</name>
     <packaging>pom</packaging>
     
@@ -24,7 +24,7 @@
             <dependency>
                 <groupId>cloud.quinimbus</groupId>
                 <artifactId>bom</artifactId>
-                <version>0.1.0</version>
+                <version>0.2-SNAPSHOT</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
