--- a/modules/generator/src/main/resources/static/admin/tsconfig.node.json
+++ b/modules/generator/src/main/resources/static/admin/tsconfig.node.json
@@ -10,6 +10,7 @@
   "compilerOptions": {
     "composite": true,
     "module": "ESNext",
+    "lib": ["ESNext", "DOM"],
     "types": ["node"]
   }
 }
